Update resume to include some Google work.

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -52,16 +52,27 @@
 
 \maketitle
 
-\section{Education}
-\cventry{Fall 2008 - Winter 2012 (expected)}{Computer Science \& Mathematics, North Carolina State University}{Raleigh, NC}{}{Overall GPA: 3.949}{CSC \& MA Majors GPA: 4.0}
 \section{Computer Skills} 
-  \cvline{Languages:}{Python, Java, Go, JavaScript, C}
+  \cvline{Languages:}{Java, C, Go, Python, JavaScript}
 \section{Experience} 
+  \cventry{January 2013 -- Present}{Android Frameworks Engineer}{Google}{Mountain View, CA}{}{
+      \begin{itemize}
+        \item Maintainer of Android input subsystem.
+        \item Spearheaded game controller standardization efforts for the Android platform and
+            optimized the gamepad input path (63\% less latency on average).
+        \item Was the lead platform engineer on the Nexus 9 keyboard and added input support for
+            the Always on Display functionality of the Nexus 6.
+        \item Developed the
+            \href{https://developer.android.com/reference/android/media/projection/MediaProjectionManager.html}{MediaProjection APIs}.
+        \item Rewrote the autobrightness algorithm in Android L.
+        \item Member of the Android API Council.
+      \end{itemize}
+  }
   \cventry{Summer 2012}{Software Engineering Intern}{Google}{Mountain View, CA}{}{
     \begin{itemize}
-      \item Rewrote Android Virtual Device (AVD) creation and management tools to focus on physical device specifications rather than the emulator's implementation details, allowing developers to create AVDs based on existing, real-world devices.
-      \item Implemented an Android application that generated device specifications for use with the new toolset.
-      \item Worked on an internal, company-wide communication app for Android as a side-project with another intern. Its design and implementation received positive remarks from a number of people, including Matias Duarte, Director of Android UI/UX.
+      \item Rewrote Android Virtual Device (AVD) creation and management tools to focus on physical
+          device specifications rather than the emulator's implementation details, allowing
+          developers to create AVDs based on existing, real-world devices.
     \end{itemize}
   }
   \cventry{Fall 2011}{Senior Design Team Lead}{Johns Hopkins University Applied Physics Lab}{}{}{
@@ -81,18 +92,13 @@
   \cventry{May 2010 --\\January 2011}{Research Professional}{Dr. Jiang, NCSU}{Raleigh, NC}{}{
     \begin{itemize}% \itemsep -2pt % reduce space between items
       \item Developed a framework to interpose advertisement's interaction with webpages.
-      \item Gave presentations on papers and research proposals to the Systems Security group.
     \end{itemize}
   }
-  \cventry{2008--2010}{Jr. Developer/IT Intern}{Futures, Inc.}{Durham, NC}{}{
-    \begin{itemize}%  \itemsep -2pt %reduce space between items
-        \item Aided in the design, and provided the implementation and support of a large scale (10,000+ initial users), Xen-virtualized server environment housing a rich internet web application.
-	      \item Developed a custom continuous integration server that interfaced with our git repositories.
-    \end{itemize}
-  }
+\section{Education}
+\cventry{Fall 2008 - Winter 2012}{Computer Science \& Mathematics, North Carolina State University}{Raleigh, NC}{}{Overall GPA: 3.949}{CSC \& MA Majors GPA: 4.0}
 \section{Extra}
   \cvlistitem{Contributor to open source projects - see \url{https://github.com/mdwrigh2}}
-  \cvlistitem{President of the NCSU Linux User Group}
-  \cvlistitem{Google Student Ambassador}
+  \cvlistitem{Member of the USB HID WG, authored a new standard for game controller LEDs}
+  \cvlistitem{5th overall, 1st in USA for the IEEExtreme programming competition 6.0}
   \cvlistitem{Winner of NCSU XCDC}
 \end{document}
